fix: avoiding portfolio section to break with flex-wrap

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -89,6 +89,7 @@
     }
     .portfolio__container {
         flex-direction: row;
+        flex-wrap: wrap;
         column-gap: 2rem;
     }
 }
